Ajout de l'id top-banner + CSS

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <h1>Cours Git</h1>
-    <2>Bienvenue dans cette formation !</2>
+    <h1 id="top-banner">Cours Git</h1>
+    <h2>Bienvenue dans cette formation !</h2>
 </body>
 
 </html>
