--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <h1 id="top-banner">Cours Git</h1>
     <h2>Bienvenue dans cette formation !</h2>
     <section>
-
-
-        <h2> Découvrir Git et Git Hub</h2>
+        <h2 class="liste des formations"> Découvrir Git et Git Hub</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vero consequatur, voluptas molestias, voluptatibus cum repellendus minus dolorem quam provident illum. Voluptatem excepturi minus esse animi totam minima porro! Quidem? Consectetur
             molestias autem saepe dolore inventore doloribus, vel ratione tenetur corrupti iure temporibus pariatur cum eveniet minima sed dolor, cupiditate ab impedit at reprehenderit, modi est labore distinctio. Sapiente, fuga.</p>
     </section>
