--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vero consequatur, voluptas molestias, voluptatibus cum repellendus minus dolorem quam provident illum. Voluptatem excepturi minus esse animi totam minima porro! Quidem? Consectetur
             molestias autem saepe dolore inventore doloribus, vel ratione tenetur corrupti iure temporibus pariatur cum eveniet minima sed dolor, cupiditate ab impedit at reprehenderit, modi est labore distinctio. Sapiente, fuga.</p>
     </section>
+
+    <section>
+        <h2 class="liste des formations"></h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem amet nulla nemo voluptatibus impedit explicabo atque consectetur cumque, earum obcaecati nesciunt rem quo voluptatem incidunt facilis architecto. Maxime, libero hic? Ducimus non quia
+            ratione odit <strong> maxime </strong>, dicta eligendi itaque possimus perferendis magni iure sunt nobis? Modi, magnam laborum. Corrupti, magni praesentium earum libero harum dolore in enim ipsum quidem ex. Dolorum maiores facere et neque
+            impedit, temporibus enim deserunt nulla eum magnam minima? Ipsum dolor repellat laboriosam modi eum facilis fuga, quo itaque! Vel, culpa. Eius sint ab fugiat fuga. At, recusandae? Fugiat repellat suscipit iure officiis repudiandae dicta cupiditate,
+            molestiae minima deleniti! Explicabo qui, consequuntur iusto enim doloremque neque earum voluptas temporibus dignissimos vero quidem nam magni officiis voluptates!</p>
+    </section>
 </body>
 
 </html>
