--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             impedit, temporibus enim deserunt nulla eum magnam minima? Ipsum dolor repellat laboriosam modi eum facilis fuga, quo itaque! Vel, culpa. Eius sint ab fugiat fuga. At, recusandae? Fugiat repellat suscipit iure officiis repudiandae dicta cupiditate,
             molestiae minima deleniti! Explicabo qui, consequuntur iusto enim doloremque neque earum voluptas temporibus dignissimos vero quidem nam magni officiis voluptates!</p>
     </section>
+
+    <form>
+        <label for="Nom"></label>
+        <input id="name" type="texte">
+
+        <input type="submit">
+    </form>
 </body>
 
 </html>
